* Spring Boot 버전 3.2.4 -> 2.5.5 다운그레이드 * 자바 버전 17 -> 11 다운 그레이드